# secret-game

./: CMakeLists.txt  LICENSE  main.c
.github/workflows/: cmake.yml
